Attempt 1st TF deployment

--- a/pipeline/azure-pipeline.yml
+++ b/pipeline/azure-pipeline.yml
@@ -19,30 +19,29 @@ variables:
   - group: terraform-vars
   - name: TF_VERSION
     value: 1.8.2
+  - name: ENVIRONMENT
+    value: STAGING
 
-stages:       
+stages:
 - stage: Plan
   jobs:
   - job: Generate_TFPlan
     steps:
     - task: TerraformCLI@0
       inputs:
-        command: plan
-        commandOptions: '-out=tfplan'
+        command: init
         workingDirectory: 'terraform'
-        environmentServiceName: 'azure-oidc-connection'
+        environmentServiceName: 'tf-pipeline-sc'
+
+    - task: TerraformCLI@0
+      inputs:
+        command: plan
+        commandOptions: '-var-file=../config/$(ENVIRONMENT).tfvars -out=tfplan'
+        workingDirectory: 'terraform'
+        environmentServiceName: 'tf-pipeline-sc'
+
     - publish: $(System.DefaultWorkingDirectory)/terraform/tfplan
       artifact: tfplan
-
-- stage: Approve
-  dependsOn: Plan
-  jobs:
-  - deployment: Admin_Approval
-    environment: Production
-    strategy:
-      runOnce:
-        deploy:
-          steps: []
 
 - stage: Apply
   dependsOn: Approve
@@ -51,10 +50,9 @@ stages:
     steps:
     - download: current
       artifact: tfplan
-      
     - task: TerraformCLI@0
       inputs:
         command: apply
-        commandOptions: 'tfplan'
+        commandOptions: 'tfplan' # vars embedded in tfplan
         workingDirectory: 'terraform'
-        environmentServiceName: 'azure-oidc-connection'
+        environmentServiceName: 'tf-pipeline-sc'
