Update azure-pipeline.yml for Azure Pipelines

--- a/pipeline/azure-pipeline.yml
+++ b/pipeline/azure-pipeline.yml
@@ -7,6 +7,10 @@ trigger:
     include:
       - terraform/*
 
+# TEMPORARY
+pool:
+  name: Self-hosted
+
 resources:
   repositories:
     - repository: infra-repo
