--- a/pipeline/azure-pipeline.yml
+++ b/pipeline/azure-pipeline.yml
@@ -7,18 +7,19 @@ trigger:
     include:
       - terraform/*
 
+# TEMPORARY
+pool:
+  name: Self-hosted
+
 resources:
   repositories:
     - repository: infra-repo
       type: github
-      name: your-org/infra-repo
+      name: OL-Smart-Clicker/infra-repo
       ref: refs/heads/staging
-      endpoint: githubServiceConnection
+      endpoint: 'Smart Clicker 2.0'
 
 variables:
-  - group: terraform-vars
-  - name: TF_VERSION
-    value: 1.8.2
   - name: ENVIRONMENT
     value: STAGING
 
@@ -27,21 +28,40 @@ stages:
   jobs:
   - job: Generate_TFPlan
     steps:
-    - task: TerraformCLI@0
+    # Install Terraform 1.11.2
+    - task: TerraformInstaller@1
+      displayName: 'Install Terraform 1.11.2'
+      inputs:
+        terraformVersion: 1.11.2
+
+    # Initialize Terraform for Staging
+    - task: TerraformCLI@1
       inputs:
         command: init
         workingDirectory: 'terraform'
-        environmentServiceName: 'tf-pipeline-sc'
+        environmentServiceName: 'tf-pipeline-sc-staging'
 
-    - task: TerraformCLI@0
+    # Generate Terraform plan
+    - task: TerraformCLI@1
       inputs:
         command: plan
         commandOptions: '-var-file=../config/$(ENVIRONMENT).tfvars -out=tfplan'
         workingDirectory: 'terraform'
-        environmentServiceName: 'tf-pipeline-sc'
+        environmentServiceName: 'tf-pipeline-sc-staging'
 
+    # Publish the tfplan artifact for later use in Apply
     - publish: $(System.DefaultWorkingDirectory)/terraform/tfplan
       artifact: tfplan
+
+- stage: Approve
+  dependsOn: Plan
+  jobs:
+  - deployment: Manual_Approval
+    environment: Staging
+    strategy:
+      runOnce:
+        deploy:
+          steps: []
 
 - stage: Apply
   dependsOn: Approve
@@ -50,9 +70,9 @@ stages:
     steps:
     - download: current
       artifact: tfplan
-    - task: TerraformCLI@0
+    - task: TerraformCLI@1
       inputs:
         command: apply
-        commandOptions: 'tfplan' # vars embedded in tfplan
+        commandOptions: 'tfplan'  # vars embedded in tfplan
         workingDirectory: 'terraform'
-        environmentServiceName: 'tf-pipeline-sc'
+        environmentServiceName: 'tf-pipeline-sc-staging'
