--- a/pipeline/azure-pipeline.yml
+++ b/pipeline/azure-pipeline.yml
@@ -20,8 +20,6 @@ resources:
       endpoint: 'Smart Clicker 2.0'
 
 variables:
-  - name: TF_VERSION
-    value: 1.8.2
   - name: ENVIRONMENT
     value: STAGING
 
@@ -36,12 +34,12 @@ stages:
       inputs:
         terraformVersion: 1.11.2
 
-    # Initialize Terraform
+    # Initialize Terraform for Staging
     - task: TerraformCLI@1
       inputs:
         command: init
         workingDirectory: 'terraform'
-        environmentServiceName: 'tf-pipeline-sc'
+        environmentServiceName: 'tf-pipeline-sc-staging'
 
     # Generate Terraform plan
     - task: TerraformCLI@1
@@ -49,7 +47,7 @@ stages:
         command: plan
         commandOptions: '-var-file=../config/$(ENVIRONMENT).tfvars -out=tfplan'
         workingDirectory: 'terraform'
-        environmentServiceName: 'tf-pipeline-sc'
+        environmentServiceName: 'tf-pipeline-sc-staging'
 
     # Publish the tfplan artifact for later use in Apply
     - publish: $(System.DefaultWorkingDirectory)/terraform/tfplan
@@ -59,7 +57,7 @@ stages:
   dependsOn: Plan
   jobs:
   - deployment: Manual_Approval
-    environment: Production
+    environment: Staging
     strategy:
       runOnce:
         deploy:
@@ -77,4 +75,4 @@ stages:
         command: apply
         commandOptions: 'tfplan'  # vars embedded in tfplan
         workingDirectory: 'terraform'
-        environmentServiceName: 'tf-pipeline-sc'
+        environmentServiceName: 'tf-pipeline-sc-staging'
