--- a/pipeline/azure-pipeline-prod.yml
+++ b/pipeline/azure-pipeline-prod.yml
@@ -11,9 +11,8 @@ trigger:
 
 pr: none # Do not run on PR
 
-# TEMPORARY
 pool:
-  name: Self-hosted
+  name: Azure Pipelines
 
 resources:
   repositories:
@@ -55,7 +54,7 @@ stages:
 
     # Publish the tfplan artifact for later use in Apply
     - publish: $(System.DefaultWorkingDirectory)/terraform/tfplan
-      artifact: tfplan-artif
+      artifact: tfplan-artif-prod
 
 - stage: Approve
   dependsOn: Plan
@@ -74,7 +73,7 @@ stages:
   - job: Execute_TFApply
     steps:
     - download: current
-      artifact: tfplan-artif
+      artifact: tfplan-artif-prod
     - task: TerraformInstaller@1
       displayName: 'Install Terraform 1.11.2'
       inputs:
@@ -87,6 +86,6 @@ stages:
     - task: TerraformCLI@1
       inputs:
         command: apply
-        commandOptions: '$(Pipeline.Workspace)/tfplan-artif/tfplan'  # vars embedded in tfplan
+        commandOptions: '$(Pipeline.Workspace)/tfplan-artif-prod/tfplan'  # vars embedded in tfplan
         workingDirectory: 'terraform'
         environmentServiceName: 'tf-pipeline-sc-production'
