--- a/pipeline/azure-pipeline.yml
+++ b/pipeline/azure-pipeline.yml
@@ -11,9 +11,8 @@ trigger:
 
 pr: none # Do not run on PR
 
-# TEMPORARY
 pool:
-  name: Self-hosted
+  name: Azure Pipelines
 
 resources:
   repositories:
